--- a/nvhpc_gpu/drhook.prof.1
+++ b/nvhpc_gpu/drhook.prof.1
@@ -1,60 +1,51 @@
-Profiling information for program='/home/gmap/mrpm/penigaudn/spcm_simple_kernel/nvhpc_gpu/./spcm.x', proc#1:
-	No. of instrumented routines called : 47
-	Instrumentation started : 20230310 093447
-	Instrumentation   ended : 20230310 093935
+Profiling information for program='./spcm.x', proc#1:
+	No. of instrumented routines called : 38
+	Instrumentation started : 20230331 151209
+	Instrumentation   ended : 20230331 151607
 	Instrumentation overhead: 0.00%
-	Memory usage : 28298 MB (heap), 11023 MB (rss), 0 MB (stack), 35298 MB (vmpeak), 0 (paging)
-	Wall-time is 185.30 sec on proc#1 (1 procs, 1 threads)
-	Thread#1:      185.30 sec (100.00%) -- Cycles: 416933119417 (646680537203)
+	Memory usage : 26986 MB (heap), 9869 MB (rss), 0 MB (stack), 34019 MB (vmpeak), 0 (paging)
+	Wall-time is 138.94 sec on proc#1 (1 procs, 1 threads)
+	Thread#1:      138.94 sec (100.00%) -- Cycles: 312606325372 (535632939337)
 
     #  % Time         Cumul         Self        Total     # of calls        Self       Total    Routine@<thread-id>
                                                                              (Size; Size/sec; Size/call; MinSize; MaxSize)
         (self)        (sec)        (sec)        (sec)                    ms/call     ms/call
 
-    1    42.53       78.812       78.812       78.812              1    78812.37    78812.38    SPCM_transfert1@1
-    2    25.41      125.888       47.076       47.076              1    47075.80    47075.80    SPCM_transfert2@1
-    3     9.97      144.354       18.466       18.466             20      923.31      923.32    TRMTOS@1
-    4     9.51      161.978       17.623       17.623             20      881.16      881.16    TRSTOM@1
-    5     2.33      166.300        4.323        4.323             20      216.14      216.14    SPCM_SIMPLE_transpose2@1
-    6     2.28      170.529        4.228        4.229             20      211.42      211.43    SPCM_SIMPLE_transpose1@1
-    7     1.20      172.753        2.224        2.225             20      111.22      111.23    SPCM_repetitif@1
-    8     0.96      174.532        1.779        1.779             10      177.89      177.89    TRLTOG@1
-    9     0.78      175.970        1.438        1.439           5000        0.29        0.29    LEINV_DGEMM_1@1
-   10     0.77      177.402        1.432        1.434           5000        0.29        0.29    LEINV_DGEMM_2@1
-   11     0.68      178.656        1.254        8.322             10      125.41      832.21    INV_TRANS@1
-   12     0.64      179.839        1.183        1.183             20       59.15       59.15    SPCM_SIMPLE_transfert2a@1
-   13     0.62      180.994        1.154        1.156           5000        0.23        0.23    FFT992@1
-   14     0.54      182.001        1.007        3.882           5000        0.20        0.78    LTINV_MOD@1
-   15     0.44      182.821        0.820        0.820             10       81.98       81.98    GATH_GRID@1
-   16     0.40      183.559        0.738        0.738              1      737.88      737.88    SETUP_TRANS@1
-   17     0.37      184.251        0.692        0.692             20       34.61       34.61    SPCM_SIMPLE_transfert1a@1
-   18     0.28      184.761        0.511       47.275             20       25.53     2363.77    SPCM_SIMPLE@1
-   19     0.14      185.012        0.251        0.251             10       25.11       25.11    TRMTOL@1
-   20     0.02      185.058        0.045        0.045             40        1.13        1.13    VERINT_DGEMM_2@1
-   21     0.02      185.093        0.035      175.423              1       35.07   175423.14    SPCM@1
-   22     0.02      185.121        0.028        0.028             20        1.42        1.42    SPCSI_boucle2@1
-   23     0.01      185.143        0.022        0.022             20        1.12        1.12    SPCSI_mxmaop1@1
-   24     0.01      185.166        0.022        0.022             20        1.11        1.11    SPCSI_mxmaop2@1
-   25     0.01      185.188        0.022        0.022             20        1.10        1.10    SPCSI_boucle4@1
-   26     0.01      185.209        0.021        0.021             20        1.07        1.07    SPCSI_boucle1@1
-   27     0.01      185.227        0.018        0.018             20        0.90        0.90    VERINT_calcul@1
-   28     0.01      185.240        0.012        0.012             20        0.61        0.61    SIGAM_transpose1@1
-   29     0.01      185.251        0.012        0.012             20        0.60        0.60    SPCSI_boucle3@1
-   30     0.01      185.263        0.012        0.012             20        0.59        0.59    SIGAM_transpose2@1
-   31     0.01      185.275        0.012        0.012             20        0.58        0.58    SITNU_transpose1@1
-   32     0.01      185.286        0.011        0.011             20        0.55        0.55    SITNU_transpose2@1
-   33     0.00      185.289        0.003        0.003             20        0.16        0.17    SPCM_SIMPLE_transfert1b@1
-   34     0.00      185.292        0.002        0.245             20        0.11       12.25    SPCSI@1
-   35     0.00      185.292        0.001        0.001             20        0.04        0.04    SPCSI_transferts1@1
-   36     0.00      185.293        0.001        0.067             20        0.03        3.33    SIGAM_SP_OPENMP@1
-   37     0.00      185.294        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
-   38     0.00      185.294        0.000        0.064             40        0.01        1.59    VERINT@1
-   39     0.00      185.294        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
-   40     0.00      185.295        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
-   41     0.00      185.295        0.000        0.000             20        0.02        0.02    SPCM_SIMPLE_transfert2b@1
-   42     0.00      185.295        0.000        0.000             20        0.01        0.01    SPCSI_transferts2@1
-   43     0.00      185.295        0.000        0.000             20        0.01        0.01    SITNU_transfert1@1
-   44     0.00      185.296        0.000        0.064             40        0.01        1.60    VERDISINT@1
-   45     0.00      185.296        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
-   46     0.00      185.296        0.000        0.046             20        0.01        2.32    SITNU_SP_OPENMP@1
-   47     0.00      185.296        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
+    1    46.59       64.729       64.729       64.729              1    64728.68    64728.69    SPCM_transfert1@1
+    2    17.79       89.444       24.715       24.715              1    24715.50    24715.50    SPCM_transfert2@1
+    3    13.12      107.676       18.232       18.232             20      911.59      911.59    TRMTOS@1
+    4    12.53      125.078       17.403       17.403             20      870.13      870.13    TRSTOM@1
+    5     3.50      129.941        4.863        4.863             20      243.13      243.14    SPCM_SIMPLE_transpose1@1
+    6     2.73      133.740        3.799        3.799             20      189.96      189.97    SPCM_SIMPLE_transpose2@1
+    7     1.56      135.910        2.170        2.170             20      108.50      108.50    SPCM_repetitif@1
+    8     0.85      137.088        1.178        1.178             20       58.88       58.88    SPCM_SIMPLE_transfert2a@1
+    9     0.56      137.862        0.775        0.775              1      774.52      774.52    SETUP_TRANS@1
+   10     0.49      138.546        0.683        0.683             20       34.16       34.16    SPCM_SIMPLE_transfert1a@1
+   11     0.09      138.664        0.118       46.514             20        5.91     2325.70    SPCM_SIMPLE@1
+   12     0.03      138.707        0.044        0.044             40        1.09        1.09    VERINT_DGEMM_2@1
+   13     0.02      138.740        0.033      138.161              1       32.85   138161.09    SPCM@1
+   14     0.02      138.768        0.028        0.028             20        1.40        1.40    SPCSI_boucle2@1
+   15     0.02      138.790        0.022        0.022             20        1.10        1.10    SPCSI_mxmaop1@1
+   16     0.02      138.812        0.022        0.022             20        1.08        1.08    SPCSI_mxmaop2@1
+   17     0.02      138.833        0.021        0.021             20        1.07        1.07    SPCSI_boucle4@1
+   18     0.02      138.854        0.021        0.021             20        1.06        1.06    SPCSI_boucle1@1
+   19     0.01      138.866        0.012        0.012             20        0.60        0.60    SIGAM_transpose1@1
+   20     0.01      138.878        0.012        0.012             20        0.59        0.59    SPCSI_boucle3@1
+   21     0.01      138.890        0.012        0.012             20        0.59        0.59    SIGAM_transpose2@1
+   22     0.01      138.901        0.011        0.011             20        0.57        0.57    SITNU_transpose1@1
+   23     0.01      138.912        0.011        0.011             20        0.54        0.54    SITNU_transpose2@1
+   24     0.01      138.923        0.011        0.011             20        0.53        0.53    VERINT_calcul@1
+   25     0.00      138.928        0.006        0.235             20        0.28       11.75    SPCSI@1
+   26     0.00      138.931        0.003        0.003             20        0.16        0.16    SPCM_SIMPLE_transfert1b@1
+   27     0.00      138.932        0.001        0.058             20        0.03        2.90    SIGAM_SP_OPENMP@1
+   28     0.00      138.932        0.001        0.001             20        0.03        0.03    SPCSI_transferts1@1
+   29     0.00      138.933        0.000        0.055             40        0.01        1.38    VERDISINT@1
+   30     0.00      138.933        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
+   31     0.00      138.934        0.000        0.000             20        0.01        0.01    SPCM_SIMPLE_transfert2b@1
+   32     0.00      138.934        0.000        0.000             20        0.01        0.01    SIGAM_cond_lim@1
+   33     0.00      138.934        0.000        0.055             40        0.01        1.37    VERINT@1
+   34     0.00      138.934        0.000        0.000             20        0.01        0.01    SPCSI_transferts2@1
+   35     0.00      138.935        0.000        0.000             20        0.01        0.01    SITNU_cond_lim@1
+   36     0.00      138.935        0.000        0.000             20        0.01        0.01    SITNU_transfert1@1
+   37     0.00      138.935        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
+   38     0.00      138.935        0.000        0.045             20        0.00        2.24    SITNU_SP_OPENMP@1
