--- a/nvhpc_gpu/drhook.prof.1
+++ b/nvhpc_gpu/drhook.prof.1
@@ -1,22 +1,58 @@
 Profiling information for program='/home/gmap/mrpm/penigaudn/spcm_simple_kernel/nvhpc_gpu/./spcm.x', proc#1:
-	No. of instrumented routines called : 9
-	Instrumentation started : 20230309 124311
-	Instrumentation   ended : 20230309 124620
+	No. of instrumented routines called : 45
+	Instrumentation started : 20230411 103940
+	Instrumentation   ended : 20230411 104412
 	Instrumentation overhead: 0.00%
-	Memory usage : 32718 MB (heap), 9455 MB (rss), 0 MB (stack), 34493 MB (vmpeak), 0 (paging)
-	Wall-time is 81.02 sec on proc#1 (1 procs, 1 threads)
-	Thread#1:       81.02 sec (100.00%) -- Cycles: 182298160508 (423920306317)
+	Memory usage : 28304 MB (heap), 11029 MB (rss), 0 MB (stack), 34469 MB (vmpeak), 0 (paging)
+	Wall-time is 171.37 sec on proc#1 (1 procs, 1 threads)
+	Thread#1:      171.37 sec (100.00%) -- Cycles: 385598587052 (612546503445)
 
     #  % Time         Cumul         Self        Total     # of calls        Self       Total    Routine@<thread-id>
                                                                              (Size; Size/sec; Size/call; MinSize; MaxSize)
         (self)        (sec)        (sec)        (sec)                    ms/call     ms/call
 
-    1    97.67       79.132       79.132       79.132              1    79132.31    79132.32    SPCM_transfert1@1
-    2     1.15       80.062        0.929        0.929              1      929.29      929.29    TRMTOS@1
-    3     0.94       80.822        0.760        0.760              1      759.99      759.99    SETUP_TRANS@1
-    4     0.20       80.983        0.162        0.162              1      161.80      161.81    SPCM_repetitif@1
-    5     0.04       81.018        0.035        0.035              1       34.53       34.53    SPCM_SIMPLE_transfert1a@1
-    6     0.00       81.020        0.002        0.002              1        2.27        2.27    SPCM_SIMPLE_transfert1b@1
-    7     0.00       81.021        0.001        0.001              1        0.68        0.68    SIGAM_transpose1@1
-    8     0.00       81.021        0.000        0.000              1        0.19        0.19    SIGAM_cond_lim@1
-    9     0.00       81.021        0.000        0.000              1        0.04        0.04    SPCSI_transferts1@1
+    1    44.75       76.683       76.683       76.683              1    76682.96    76682.97    SPCM_transfert1@1
+    2    26.80      122.611       45.928       45.928              1    45928.06    45928.07    SPCM_transfert2@1
+    3    10.82      141.146       18.535       18.535             20      926.77      926.77    TRMTOS@1
+    4    10.23      158.681       17.535       17.535             20      876.75      876.75    TRSTOM@1
+    5     1.32      160.938        2.257        2.257             20      112.84      112.84    SPCM_repetitif@1
+    6     0.83      162.364        1.426        1.428           5000        0.29        0.29    LEINV_DGEMM_1@1
+    7     0.83      163.780        1.416        1.417           5000        0.28        0.28    LEINV_DGEMM_2@1
+    8     0.77      165.098        1.318        1.318             10      131.77      131.77    TRLTOG@1
+    9     0.70      166.305        1.207        1.207             20       60.36       60.36    SPCM_SIMPLE_transfert2a@1
+   10     0.67      167.450        1.145        1.146           5000        0.23        0.23    FFT992@1
+   11     0.56      168.413        0.963        3.810           5000        0.19        0.76    LTINV_MOD@1
+   12     0.42      169.134        0.721        0.721              1      721.30      721.30    SETUP_TRANS@1
+   13     0.41      169.829        0.695        0.695             20       34.73       34.74    SPCM_SIMPLE_transfert1a@1
+   14     0.40      170.517        0.688        7.163             10       68.81      716.25    INV_TRANS@1
+   15     0.20      170.858        0.341        0.341             10       34.07       34.07    GATH_GRID@1
+   16     0.12      171.058        0.200        0.200             10       20.05       20.05    TRMTOL@1
+   17     0.03      171.107        0.049       38.251             20        2.43     1912.53    SPCM_SIMPLE@1
+   18     0.03      171.155        0.048        0.048             40        1.20        1.20    VERINT_DGEMM_2@1
+   19     0.02      171.189        0.035      163.153              1       34.51   163152.84    SPCM@1
+   20     0.02      171.215        0.026        0.026             20        1.29        1.29    SPCSI_mxmaop1@1
+   21     0.01      171.239        0.024        0.024             20        1.18        1.18    SPCSI_mxmaop2@1
+   22     0.01      171.256        0.018        0.018             20        0.89        0.89    SPCSI_boucle4@1
+   23     0.01      171.274        0.017        0.017             20        0.87        0.87    SPCSI_boucle1@1
+   24     0.01      171.286        0.012        0.012             20        0.60        0.60    VERINT_calcul@1
+   25     0.01      171.297        0.012        0.012             20        0.58        0.58    SIGAM_transpose2@1
+   26     0.01      171.309        0.011        0.011             20        0.56        0.56    SIGAM_transpose1@1
+   27     0.01      171.319        0.011        0.011             20        0.54        0.54    SPCSI_boucle2@1
+   28     0.01      171.330        0.010        0.010             20        0.52        0.52    SITNU_transpose1@1
+   29     0.01      171.340        0.010        0.010             20        0.49        0.49    SPCSI_boucle3@1
+   30     0.01      171.349        0.010        0.010             20        0.48        0.48    SITNU_transpose2@1
+   31     0.00      171.355        0.006        0.226             20        0.28       11.29    SPCSI@1
+   32     0.00      171.359        0.004        0.004             20        0.20        0.20    SITNU_cond_lim@1
+   33     0.00      171.363        0.004        0.004             20        0.18        0.18    SIGAM_cond_lim@1
+   34     0.00      171.366        0.003        0.003             20        0.16        0.16    SPCM_SIMPLE_transfert1b@1
+   35     0.00      171.367        0.001        0.001             20        0.06        0.06    SITNU_calcul1@1
+   36     0.00      171.368        0.001        0.064             20        0.04        3.21    SIGAM_SP_OPENMP@1
+   37     0.00      171.368        0.001        0.001             20        0.03        0.03    SPCSI_transferts1@1
+   38     0.00      171.369        0.001        0.001             20        0.03        0.03    SPCM_SIMPLE_transfert2b@1
+   39     0.00      171.369        0.000        0.061             40        0.01        1.52    VERDISINT@1
+   40     0.00      171.370        0.000        0.060             40        0.01        1.51    VERINT@1
+   41     0.00      171.370        0.000        0.000             20        0.02        0.02    SPCSI_transferts2@1
+   42     0.00      171.370        0.000        0.000             20        0.02        0.02    SITNU_transfert1@1
+   43     0.00      171.371        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
+   44     0.00      171.371        0.000        0.050             20        0.01        2.49    SITNU_SP_OPENMP@1
+   45     0.00      171.371        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
